non_executable_reasons_record_from_random_10k/6332.txt
3.5
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%bash
sudo -i
echo Asia/Tokyo > /etc/timezone
dpkg-reconfigure --frontend noninteractive tzdata
curl -fsSL https://download.docker.com/linux/static/stable/x86_64/docker-17.09.0-ce.tgz \
  | tar -xzC /usr/local/bin --strip=1 docker/docker
docker ps -a
------------------

[0;36m  File [0;32m"<ipython-input-1-3ed536408e25>"[0;36m, line [0;32m3[0m
[0;31m    %%bash[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-3ed536408e25>, line 3)

Executability                            : False
